--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -172,6 +172,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
@@ -234,9 +235,6 @@
       <HintPath>..\packages\UmbracoCms.Core.7.5.3\lib\umbraco.MacroEngines.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Umbraco.NetPayment.Borgun">
-      <HintPath>..\..\www.Raunverd.is\Umbraco.Site\Umbraco.Extensions\bin\Umbraco.NetPayment.Borgun.dll</HintPath>
-    </Reference>
     <Reference Include="umbraco.providers, Version=1.0.6092.24024, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\UmbracoCms.Core.7.5.3\lib\umbraco.providers.dll</HintPath>
       <Private>True</Private>
@@ -255,9 +253,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Order.cs" />
-    <Compile Include="OrderItem.cs" />
+    <Compile Include="Helpers\OrderHelper.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderItem.cs" />
+    <Compile Include="PaymentRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\Borgun\CheckHashMessage.cs" />
+    <Compile Include="Providers\Borgun\PaymentRequest.cs" />
+    <Compile Include="Providers\Borgun\BorgunResponseController.cs" />
+    <Compile Include="Providers\Borgun\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
