--- a/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
@@ -2,20 +2,17 @@
 <package >
   <metadata>
     <id>Umbraco.NetPayment</id>
-    <version>1.1.0</version>
+    <version>2.0.2</version>
     <title>Umbraco.NetPayment</title>
-    <authors>Gunnar Már Óttarsson</authors>
+    <authors>Gunnar Már Óttarsson/Vettvangur</authors>
     <owners>Vettvangur</owners>
     <licenseUrl>http://www.vettvangur.is</licenseUrl>
     <projectUrl>https://github.com/Vettvangur/Umbraco.NetPayment</projectUrl>
     <iconUrl>https://www.vettvangur.is/content/favicon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Allows configuration of payment providers within umbraco, does not use uWebshop.</description>
-    <releaseNotes>First local NuGet release.</releaseNotes>
+    <releaseNotes>Vorto property types.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags></tags>
   </metadata>
-  <files>
-    <file src="bin\release\Umbraco.NetPayment.xml" target="lib\Net452" />
-  </files>
 </package>
