--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="3.0.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.1" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Examine" version="0.1.69.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="ImageProcessor" version="2.4.4.0" targetFramework="net452" />
@@ -32,6 +33,7 @@
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.5.3" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
