--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -35,5 +35,6 @@
   <package id="UmbracoCms.Core" version="7.5.3" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
