--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -32,8 +32,10 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
+  <package id="System.IO.Abstractions" version="2.0.0.144" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.5.3" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
