--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -28,6 +28,7 @@
   <package id="MiniProfiler" version="2.1.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="NLog" version="4.4.11" targetFramework="net452" />
   <package id="Our.Umbraco.Vorto" version="1.5.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
