--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -286,11 +286,13 @@
   <ItemGroup>
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
-    <Compile Include="Helpers\MD5StringSum.cs" />
+    <Compile Include="Helpers\MD5Helper.cs" />
+    <Compile Include="LocalCallbacks.cs" />
     <Compile Include="LogFactory.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="OrderItem.cs" />
+    <Compile Include="PaymentData.cs" />
     <Compile Include="PaymentRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
