--- a/src/Ekom.NetPayment.Tests/packages.config
+++ b/src/Ekom.NetPayment.Tests/packages.config
@@ -4,7 +4,7 @@
   <package id="Castle.Core" version="4.1.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
-  <package id="Examine" version="0.1.83" targetFramework="net452" />
+  <package id="Examine" version="0.1.82" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="ImageProcessor" version="2.5.3" targetFramework="net452" />
   <package id="ImageProcessor.Web" version="4.8.3" targetFramework="net452" />
@@ -35,11 +35,13 @@
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="Our.Umbraco.Vorto" version="1.5.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.IO.Abstractions" version="2.0.0.144" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
-  <package id="UmbracoCms.Core" version="7.6.4" targetFramework="net452" />
+  <package id="UmbracoCms.Core" version="7.6.0" targetFramework="net452" />
+  <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
