--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -259,7 +259,7 @@
     <Compile Include="Models\PaymentData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="UmbracoEvents.cs" />
+    <Compile Include="App_Start\UmbracoEvents.cs" />
     <Compile Include="UmbracoService.cs" />
     <Compile Include="XMLConfigurationService.cs" />
   </ItemGroup>
