--- a/src/Ekom.NetPayment.Tests/Ekom.NetPayment.Tests.csproj
+++ b/src/Ekom.NetPayment.Tests/Ekom.NetPayment.Tests.csproj
@@ -125,6 +125,7 @@
     <Reference Include="Microsoft.Owin.Security.OAuth, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.Security.OAuth.3.0.1\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.1.11\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -236,6 +237,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers.cs" />
+    <Compile Include="NetPaymentTests.cs" />
     <Compile Include="UmbracoServiceTests.cs" />
     <Compile Include="ValitorTests.cs" />
     <Compile Include="XMLConfigurationServiceTests.cs" />
@@ -246,6 +248,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Umbraco.NetPayment.Valitor\Umbraco.NetPayment.Valitor.csproj">
+      <Project>{F23EC071-8C8C-404B-B82D-DB05806581C7}</Project>
+      <Name>Umbraco.NetPayment.Valitor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Umbraco.NetPayment\Umbraco.NetPayment.csproj">
       <Project>{4d7b353e-dd49-47c7-82fd-0eb325e67fa8}</Project>
       <Name>Umbraco.NetPayment</Name>
