--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -250,6 +250,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Helpers\MD5Helper.cs" />
     <Compile Include="Helpers\StringExtensions.cs" />
+    <Compile Include="Helpers\URLHelper.cs" />
     <Compile Include="LocalCallbacks.cs" />
     <Compile Include="LogFactory.cs" />
     <Compile Include="MailService.cs" />
