--- a/.editorconfig
+++ b/.editorconfig
@@ -1,30 +1,18 @@
-﻿# editorconfig.org
+# editorconfig.org
+
+# top-most EditorConfig file
 root = true
 
+# Default settings:
+[*]
+charset = utf-8
+end_of_line = crlf
+indent_size = 4
+indent_style = space
+insert_final_newline = true
+
 [*.{js,jsx,ts,tsx}]
-charset = utf-8
-end_of_line = crlf
 indent_size = 2
-indent_style = space
-insert_final_newline = true
-
-[*.cs]
-charset = utf-8
-end_of_line = crlf
-indent_size = 4
-indent_style = tab
-insert_final_newline = true
-
-[*.cshtml]
-charset = utf-8
-end_of_line = crlf
-indent_size = 4
-indent_style = space
-insert_final_newline = true
 
 [*.{html,config}]
-charset = utf-8
-end_of_line = crlf
 indent_size = 2
-indent_style = space
-insert_final_newline = true
