--- a/src/Ekom.NetPayment.Tests/Ekom.NetPayment.Tests.csproj
+++ b/src/Ekom.NetPayment.Tests/Ekom.NetPayment.Tests.csproj
@@ -148,6 +148,7 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NPoco, Version=3.7.1.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Our.Umbraco.Vorto, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Our.Umbraco.Vorto.1.5.3\lib\net45\Our.Umbraco.Vorto.dll</HintPath>
     </Reference>
