--- a/src/Ekom.NetPayment.Tests/packages.config
+++ b/src/Ekom.NetPayment.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Core" version="4.1.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Examine" version="0.1.82" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="ImageProcessor" version="2.5.3" targetFramework="net452" />
