--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -63,7 +63,7 @@
       <HintPath>..\packages\Examine.0.1.82\lib\net45\Examine.dll</HintPath>
     </Reference>
     <Reference Include="GMO.Umbraco.PropertyHelper, Version=1.0.6419.27311, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\Forritun\DeltaCars\packages\GMO.Umbraco.PropertyHelper.1.1.0\lib\net452\GMO.Umbraco.PropertyHelper.dll</HintPath>
+      <HintPath>..\packages\GMO.Umbraco.PropertyHelper.1.1.0\lib\net452\GMO.Umbraco.PropertyHelper.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
