--- a/src/Ekom.NetPayment.Tests/packages.config
+++ b/src/Ekom.NetPayment.Tests/packages.config
@@ -4,7 +4,7 @@
   <package id="Castle.Core" version="4.1.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="2.0.1" targetFramework="net452" />
   <package id="Examine" version="0.1.82" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="ImageProcessor" version="2.5.3" targetFramework="net452" />
@@ -44,5 +44,7 @@
   <package id="System.IO.Abstractions" version="2.0.0.144" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.6.0" targetFramework="net452" />
+  <package id="Unity.Abstractions" version="2.0.0" targetFramework="net452" />
+  <package id="Unity.Container" version="5.0.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
