--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -3,7 +3,7 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="2.0.1" targetFramework="net452" />
   <package id="Examine" version="0.1.82" targetFramework="net452" />
   <package id="GMO.Umbraco.PropertyHelper" version="1.1.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
@@ -42,7 +42,9 @@
   <package id="System.IO.Abstractions" version="2.0.0.144" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.6.0" targetFramework="net452" />
-  <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.Abstractions" version="2.0.0" targetFramework="net452" />
+  <package id="Unity.Container" version="5.0.0" targetFramework="net452" />
+  <package id="Unity.ServiceLocation" version="2.0.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
