Add SlowCheetah as dependency

--- a/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Umbraco.NetPayment</id>
-    <version>7.2.1</version>
+    <version>7.3.1</version>
     <title>Umbraco.NetPayment</title>
     <authors>Gunnar Már Óttarsson/Vettvangur</authors>
     <owners>Vettvangur</owners>
@@ -11,8 +11,11 @@
     <iconUrl>https://www.vettvangur.is/content/favicon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Allows configuration of payment providers within umbraco, does not depend on uWebshop.</description>
-    <releaseNotes>Purge Unity.Abstractions</releaseNotes>
+    <releaseNotes>Add slowcheetah dependency</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags></tags>
+    <dependencies>
+      <dependency id="Microsoft.VisualStudio.SlowCheetah" version="3.0.0" />
+    </dependencies>
   </metadata>
 </package>
