borgunapi minor refactor

--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -238,17 +238,21 @@
     <Compile Include="ExamineManagerBase.cs" />
     <Compile Include="ExamineManagerWrapper.cs" />
     <Compile Include="Exceptions\PaymentProviderNotFoundException.cs" />
+    <Compile Include="Exceptions\XmlConfigurationNotFoundException.cs" />
     <Compile Include="Exceptions\NetPaymentException.cs" />
     <Compile Include="GMO.Umbraco.PropertyHelper\PropertyHelper.cs" />
     <Compile Include="Helpers\AesCryptoHelper.cs" />
     <Compile Include="Helpers\CryptoHelpers.cs" />
     <Compile Include="Helpers\GetTypesWithInterface.cs" />
+    <Compile Include="Helpers\PublishedPaymentProviderHelper.cs" />
     <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="Helpers\URLHelper.cs" />
+    <Compile Include="Interfaces\IMailService.cs" />
     <Compile Include="Interfaces\IOrderRetriever.cs" />
     <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Interfaces\IPaymentProvider.cs" />
     <Compile Include="Interfaces\IXMLConfigurationService.cs" />
+    <Compile Include="IPaymentSettings.cs" />
     <Compile Include="LocalCallbacks.cs" />
     <Compile Include="LogFactory.cs" />
     <Compile Include="MailService.cs" />
@@ -256,6 +260,7 @@
     <Compile Include="OrderService.cs" />
     <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\PaymentData.cs" />
+    <Compile Include="PaymentSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="App_Start\UmbracoEvents.cs" />
