Fix pp overloading in callbacks
No longer encrypt references, persist pp node name in order
Add CustomerInfo object

--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -252,15 +252,16 @@
     <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Interfaces\IPaymentProvider.cs" />
     <Compile Include="Interfaces\IXMLConfigurationService.cs" />
-    <Compile Include="IPaymentSettings.cs" />
+    <Compile Include="Interfaces\IPaymentSettings.cs" />
     <Compile Include="LocalCallbacks.cs" />
     <Compile Include="LogFactory.cs" />
     <Compile Include="MailService.cs" />
+    <Compile Include="Models\CustomerInfo.cs" />
     <Compile Include="Models\OrderStatus.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\PaymentData.cs" />
-    <Compile Include="PaymentSettings.cs" />
+    <Compile Include="Models\PaymentSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="App_Start\UmbracoEvents.cs" />
