More SiminnPay, simpler overloaded pp handling, possible to share xmlConfig between overloads
When calling GetPaymentProvider with an overloaded pp name the IPaymentProvider is constructed with the overloaded paymentProvider umbraco node by default.
When using an overloaded payment provider, if a matching xml config cannot be find using its name, netpayment will now search for an xmlConfig using the base payment provider name

--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -244,6 +244,7 @@
     <Compile Include="GMO.Umbraco.PropertyHelper\PropertyHelper.cs" />
     <Compile Include="Helpers\AesCryptoHelper.cs" />
     <Compile Include="Helpers\CryptoHelpers.cs" />
+    <Compile Include="Helpers\GetOverridingValue.cs" />
     <Compile Include="Helpers\GetTypesWithInterface.cs" />
     <Compile Include="Helpers\PublishedPaymentProviderHelper.cs" />
     <Compile Include="Helpers\StringExtensions.cs" />
