--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{4D7B353E-DD49-47C7-82FD-0EB325E67FA8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Umbraco.NetPayment</RootNamespace>
-    <AssemblyName>Umbraco.NetPayment</AssemblyName>
+    <RootNamespace>Ekom.NetPayment</RootNamespace>
+    <AssemblyName>Ekom.NetPayment</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -34,7 +34,7 @@
     <DefineConstants>TRACE;TINYIOC_INTERNAL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Umbraco.NetPayment.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Ekom.NetPayment.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
@@ -277,10 +277,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Ekom.NetPayment.nuspec" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Umbraco.NetPayment.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeQuality.Analyzers.2.9.8\analyzers\dotnet\cs\Humanizer.dll" />
