--- a/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Umbraco.NetPayment.v8</id>
-    <version>9.1.0</version>
-    <title>Umbraco.NetPayment.v8</title>
+    <id>Ekom.NetPayment.v8</id>
+    <version>0.0.1</version>
+    <title>Ekom.NetPayment.v8</title>
     <authors>Gunnar Már Óttarsson/Vettvangur</authors>
     <owners>Vettvangur</owners>
-    <projectUrl>https://github.com/Vettvangur/Umbraco.NetPayment</projectUrl>
+    <projectUrl>https://github.com/Vettvangur/Ekom.NetPayment</projectUrl>
     <iconUrl>https://www.vettvangur.is/content/favicon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Allows configuration of payment providers within umbraco, does not depend on uWebshop.</description>
-    <releaseNotes>GetPPProperties in public api.</releaseNotes>
+    <description>Allows configuration of payment providers within umbraco, can be used without Ekom.</description>
+    <releaseNotes>Rebranding.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags></tags>
     <dependencies>
